# -

./: .gitignore  CLAUDE.md  README.md  phase2_アナロジー探索.md  pyproject.toml  ローグライクゲーム_設計仕様書.md
.github/workflows/: ci.yml  deploy.yml
docs/: KPIレポート_1000runs.txt  Web版移植_実装レポート_Step1-3.md  data.json  分析ツール.md  拡張ガイド.md  統計レポート_分析.md  設計仕様書.md  設計仕様書_Web版実装仕様.md  開発運用ガイド.md
docs/archive/業種選定プロセス/: README.md  phase0_課題の再定義.md  phase1_サブ問題への分解.md  phase3_発散.md  phase4_収束.md  phase5_最小検証実験.md  補論_業種選定S1の根拠.md
roguelike/: KPIレポート_1000runs.txt  README.md  __init__.py  __main__.py  bot.py  data.py  engine.py  equivalence.py  rng.py  simulate.py  tests.py  ui.py  world.py
web/: README.md  data.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/fixtures/: golden_results.json  golden_trace.json  rng_fixture.json
web/scripts/: ab.ts  batch.ts  doctor.ts  ev.ts  gen-fixtures.ts  report-lib.ts  report.ts  search-bot.ts  sim.ts  smoke-render.ts  sweep.ts  tune.ts
web/src/: behaviors.ts  bot.ts  data.ts  engine.ts  main.ts  rng.ts  styles.css  trace.ts  world.ts
web/src/ui/: telemetry.ts  view.ts
web/tests/: extensible.test.ts  golden.test.ts  relics.test.ts  rng.test.ts  stats.test.ts
