[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "roguelike"
version = "0.1.0"
description = "プロシージャル生成・パーマデス・メタ進行を備えたローグライト（MVP）"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
# 実行時依存なし（標準ライブラリのみ）。これが移植性とデバッグ容易性の核。
dependencies = []

[project.optional-dependencies]
# 開発時のみ（任意）。テストは標準ライブラリだけでも `python3 -m roguelike.tests` で動く。
dev = ["pytest>=7"]

[project.scripts]
# インストールすると `roguelike play` などで起動できる。
roguelike = "roguelike.__main__:main"

[tool.setuptools]
packages = ["roguelike"]

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py"]
